--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -178,7 +178,7 @@ html {
 
 .menu .social-network ul li a:hover {
     background-color: #fff;
-    color: #a43f49;
+    color: #a6131b;
 }
 
 .menu .copyright-text {
@@ -189,7 +189,7 @@ html {
 .menu .copyright-text p {
     border-top: 1px solid rgba(250, 250, 250, 0.1);
     display: inline-block;
-    width: 100%;
+    width: 100%;a6131b
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 30px;
